--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "30.0.2"
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.codinghub.goodhabitbeta"
@@ -23,7 +23,8 @@ android {
         }
     }
     buildFeatures{
-        viewBinding = true
+        dataBinding true
+        viewBinding true
     }
 }
 
@@ -36,11 +37,28 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+// view model
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    // neumorphism
+    implementation 'com.github.fornewid:neumorphism:0.3.0'
+
+    // Scalable size units
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+// Rounded image view
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+    // Volly library for network loading
+    implementation 'com.android.volley:volley:1.1.1'
+
+    // glide library
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    // horoscope api
+    implementation'the.bot.box:horoscope-api:1.0.2'
+
 
 }
