--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.4.30'
+    ext.kotlin_version = '1.4.31'
     repositories {
         google()
         jcenter()
@@ -33,6 +33,7 @@ ext {
     coroutines = '1.3.9'
     lifecycleVersion = '2.2.0'
     materialVersion = '1.3.0'
+    roomVersion = '2.3.0'
     // testing
     junitVersion = '4.13.2'
     espressoVersion = '3.3.0'
