alarm missions all layouts are added!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
         <receiver
             android:name=".receiver.AlarmReceiver"
             android:enabled="true"
-            android:exported="false" />
+            android:exported="true" />
         <receiver
             android:name=".receiver.SnoozeReceiver"
             android:enabled="true"
